# glow_sg13g2

./: README.md  index.html
.github/workflows/: deploy.yml
cells/: .gitignore  cells_logic.txt  cells_physical.txt
cells/DFQQN_D1/: DFQQN_D1.py
cells/DLN_D1/: DLN_D1.py
cells/INV_D1/: INV_D1.cdl  INV_D1.gds  INV_D1.py  INV_D1.sp
cells/INV_D12/: INV_D12.py
code/glow_utils/: .gitignore  README.md  pyproject.toml
code/glow_utils/examples/: demotech.json  sg13g2.json  test_mosfet.py  test_ngspice_combsim.py  test_ngspice_combsim_dspc.py  test_ngspice_combsim_leakagepower.py  test_ngspice_dffClkToOut.py  test_ngspice_dffHold.py  test_ngspice_dffSetup.py  test_symcheck.py  test_symdict.py  test_symieee1164.py  test_symparam.py  test_symsim_circuit_with_vdd_vss_short.py  test_symsim_nand2.py  test_symsim_tie_low.py  test_symsubcircuit_anonimize.py  test_symsubcircuit_buffer.py  test_symsubcircuit_buffer_ppar.py  test_symsubcircuit_inverter.py  test_symsubcircuit_inverter_ppar.py  test_symtech.py
code/glow_utils/glow_parcells/: __init__.py  inv_par.py  invz2_par.py  invz_par.py  nand2_par.py  nand2_pdn2_par.py  nand2_pdn_par.py  nand2_pun_par.py  nand3_par.py  nand4_par.py
code/glow_utils/glow_tools/: absgen.py  batch_absgen.py  batch_checkcell.py  batch_gencell.py  gds2svg.py  gdsinfo.py  gdsutil.py  gencell.py
code/glow_utils/glow_utils/: __init__.py  lef.py  netlist.py  ngspice.py  symcheck.py  symdevice.py  symdict.py  symieee1164.py  symmosfet.py  symparam.py  symsim.py  symsubcircuit.py  symtech.py
glow_sg13g2/: book.toml
workflow/: book.toml
(+82 files in other folders)
