[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glow_utils"
version = "0.1.0"
description = "Gate Library for Open Flow Utilities"
authors = [
    {name = "Dr. Dušan Grujić", email = "dusan.grujic@etf.bg.ac.rs"}
]
license = {text = "APACHE 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sympy",
    "gdstk",
    "tabulate"
]

[tool.setuptools.package-dir]
"glow_utils" = "glow_utils"
"glow_tools" = "glow_tools"
"glow_parcells" = "glow_parcells"

[project.scripts]
gdsinfo = "glow_tools.gdsinfo:main"
gdsutil = "glow_tools.gdsutil:main"
absgen  = "glow_tools.absgen:main"
gencell = "glow_tools.gencell:main"
batch_gencell = "glow_tools.batch_gencell:main"
batch_checkcell = "glow_tools.batch_checkcell:main"
batch_absgen = "glow_tools.batch_absgen:main"
gds2svg = "glow_tools.gds2svg:main"
